force-app/main/default/objects/Email_Domain_Queue_Mapping__mdt/Email_Domain_Queue_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used for Email-to-Case Case routing based on email domain</description>
    <label>Email Domain Queue Mapping</label>
    <pluralLabel>Email Domain Queue Mappings</pluralLabel>
</CustomObject>